@@ -8,7 +8,7 @@ from cli_helpers.compat import csv, StringIO
 from cli_helpers.utils import filter_dict_by_key
 from .preprocessors import bytes_to_string, override_missing_value
 
-supported_formats = ('csv', 'tsv')
+supported_formats = ('csv', 'csv-tab')
 preprocessors = (override_missing_value, bytes_to_string)
 
 
@@ -29,7 +29,7 @@ def adapter(data, headers, table_format='csv', **kwargs):
             'quotechar', 'quoting', 'skipinitialspace', 'strict')
     if table_format == 'csv':
         delimiter = ','
-    elif table_format == 'tsv':
+    elif table_format == 'csv-tab':
         delimiter = '\t'
     else:
         raise ValueError('Invalid table_format specified.')
